# Top-Down-Shooter

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  collider_bad_performance.txt  main.c
mock/: ecs
safire/: CHANGELOG.md  CMakeLists.txt
safire/dependencies/glad/: glad.h
safire/dependencies/src/: glad.c
safire/include/safire/: components.h  ecs.h  input.h  keybindings.h  pipeline.h  safire.h  utils.h
safire/shaders/: sfr_default_shader.frag  sfr_default_shader.vert
safire/src/: components.c  config.c  ecs.c  ecs_sprite.c  ecs_transform.c  input.c  pipeline-shader.c  pipeline-texture.c  pipeline-window.c  pipeline.c  renderer.c  safire.c  shader.c  texture.c  utils.c
safire/src/components/: ecs_collider.c  ecs_sprite.c  ecs_transform.c
topdown_shooter/: CHANGELOG.md
topdown_shooter/include/topdown_shooter/: bullet.h  camera_controller.h  dash.h  destroy_target.h  enemy_controller.h  enemy_handler.h  manager.h  player_controller.h  tile.h  utils.h
topdown_shooter/scenes/: scene_arena.h  scene_start_manager.h
topdown_shooter/scenes/src/: scene_arena.c  scene_start_manager.c
topdown_shooter/src/: bullet.c  camera_controller.c  dash.c  destroy_target.c  enemy_controller.c  enemy_handler.c  manager.c  player_controller.c  tile.c  utils.c
